deps/v8/test/message/fail/for-of-non-iterable.out
*%(basename)s:5: TypeError: {} is not iterable
for ([a] of {}) {}
            ^
TypeError: {} is not iterable
    at *%(basename)s:5:13
